--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "oci-checker"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
 chrono = { version = "0.4.42", features = ["serde"] }
 dotenv = "0.15.0"
+lazy_static = "1.5.0"
+rand = "0.9.2"
 regex = "1.12.2"
 reqwest = "0.12.24"
 serde = { version = "1.0.228", features = ["derive"] }
