--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "oci-checker"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2024"
 
 [dependencies]
@@ -10,7 +10,7 @@ dotenv = "0.15.0"
 lazy_static = "1.5.0"
 rand = "0.9.2"
 regex = "1.12.2"
-reqwest = "0.12.24"
+reqwest = { version = "0.12.24", default-features=false, features=["rustls-tls", "socks"] }
 serde = { version = "1.0.228", features = ["derive"] }
 tokio = { version = "1.48.0", features = ["full"] }
 tracing = "0.1.41"
