--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ rand = "0.9.2"
 regex = "1.12.2"
 reqwest = { version = "0.12.24", default-features=false, features=["rustls-tls", "socks"] }
 serde = { version = "1.0.228", features = ["derive"] }
-tokio = { version = "1.48.0", features = ["full"] }
+tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
